Deploy pages on tags, closes #5

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -108,6 +108,7 @@ build_tags_epub:
 pages:
   only:
     - master
+    - tags
   script:
     - mv _build/html/ public
     - mv _build/epub/*.epub public/_static/
